# Agent-Knowledge-Management-System

./: .gitignore  README.md  agents.md  akms_config.yaml.example  how-this-works.md  pyproject.toml
.omc/: prd.json  progress.txt  project-memory.json
.omc/sessions/: 07fe955e-c334-4d9d-ac78-c7a209f5803b.json
.omc/state/: agent-replay-a3a0cd3e-1eb7-401f-8f72-1c3c73cb43c5.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-10T16-58-53-808Z.json
info/: implementation_plan.md  task.md
src/akms/: __init__.py  cli.py  config.py  mcp_server.py
src/akms/agents/: __init__.py  base.py  council.py  dev_sage.py  executor.py  expert.py  librarian.py
src/akms/checkpoints/: __init__.py  fork.py  schema.sql  store.py
src/akms/core/: __init__.py  budget.py  message.py  multi_orchestrator.py  orchestrator.py  quota.py
src/akms/integrations/: __init__.py  claude_code.py  codex.py  generic.py  opencode.py
src/akms/knowledge/: __init__.py  db.py  graph.py  schema.sql  search.py  wiki.py
src/akms/logging/: __init__.py  conversation_log.py  token_tracker.py
tests/: conftest.py  test_budget.py  test_checkpoints.py  test_cli_subprocess.py  test_config.py  test_council.py  test_db.py  test_edge_cases.py  test_executor.py  test_expert.py  test_integration.py  test_librarian.py  test_message.py  test_orchestrator.py  test_registry.py  test_search.py  test_user_overlay.py  test_wiki.py
wiki/: akms-concepts.md  akms-integration.md  akms-overview.md  akms-quickstart.md  index.md
(+11 files in other folders)
