# edited by gemini
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"  # edited by gemini

[project]
name = "akms"
version = "0.1.0"
description = "Agent Knowledge Management System — provider-agnostic, multi-agent knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "anthropic>=0.30",
    "openai>=1.30",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
gemini = ["google-genai>=1.0"]
deepseek = ["openai>=1.30"]
ollama = ["ollama>=0.3"]

[project.scripts]
akms = "akms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
